--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "autoprefixer": "^9.8.6",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "firebase": "^8.2.2",
     "lodash": "^4.17.20",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
